--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BIKECITY</title>
+    <title>BIKECITY - Quiz</title>
     <link rel="shortcut icon" href="./img/icon.png">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -22,58 +22,17 @@
             </ul>
         </nav>
     </div>
-    <div id="image-car">
-        <img id="image-slider">
-    </div>
-
-    <h3>Loja</h3>
-    <div id="cards">
-
-        <div class="card">
-            <img id="produto-1" src="./img/car/1.jpg">
-            <h3>Bicicleta 1</h6>  
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus autem, corporis nam eaque a porro ea magnam? Voluptatum deserunt fuga sit quisquam?</p>
-            <button>R$200,00</button>
-        </div>
-
-        <div class="card">
-            <img id="produto-2" src="./img/car/2.jpg">
-            <h3>Bicicleta 2</h6>  
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus autem, corporis nam eaque a porro ea magnam? Voluptatum deserunt fuga sit quisquam?</p>
-            <button>R$200,00</button>
-        </div>
-
-        <div class="card">
-            <img id="produto-3" src="./img/car/3.jpg">
-            <h3>Bicicleta 3</h6>  
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus autem, corporis nam eaque a porro ea magnam? Voluptatum deserunt fuga sit quisquam?</p>
-            <button>R$200,00</button>
-        </div>
-
-        <div class="card">
-            <img id="produto-4" src="./img/car/4.jpg">
-            <h3>Bicicleta 4</h6>  
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus autem, corporis nam eaque a porro ea magnam? Voluptatum deserunt fuga sit quisquam?</p>
-            <button>R$200,00</button>
-        </div>
-
-    </div>
-
-    <h3>Contato</h3>
-    <div id="contato">
-        <form>
-            Email:<input type="email" placeholder="Digite seu email">
-            Nome:<input type="text" placeholder="Digite seu nome">
-            Telefone:<input type="text" placeholder="Digite seu telefone">
-            <input type="submit" value="Enviar">
-        </form>
-    </div>
-
+    <h1>Quiz</h1>
+    <p>Bem-vindo ao Quiz da BikeCity! Teste seus conhecimentos sobre bicicletas e ciclismo.</p>
     <hr>
-    <footer>
-        <h5>© 2024 - Todos os direitos reservados.</h5>
-    </footer>
 
-    <script src="script.js"></script>
+    <div id="quiz">
+    </div>
+    
+
+    <script src="./quiz.js"></script>
 </body>
 </html>
+
+
+   
