--- a/login.html
+++ b/login.html
@@ -27,8 +27,10 @@
         <p>Faça seu login:</p>
 
         <form>
-            Email:<input type="email" placeholder="Digite seu email">
-            Senha:<input type="password" placeholder="Digite sua senha">
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" name="email" placeholder="Digite seu email"><br>
+            <label for="senha">Senha:</label><br>
+            <input type="password" id="senha" name="senha" placeholder="Digite sua senha"><br>
             <input type="submit" value="Enviar">
         </form>
     </div>
